--- a/.development.env
+++ b/.development.env
@@ -1,7 +1,9 @@
 PORT=5000
-POSTGRES_HOST=localhost
+
+POSTGRES_HOST=postgres
 POSTGRES_USER=postgres
 POSTGRES_DB=dark-project
 POSTGRES_PASSWORD=root
 POSTGRES_PORT=5432
+
 PRIMARY_KEY=secret_key
