--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "@nestjs/sequelize": "^8.0.0",
     "@nestjs/swagger": "^5.1.5",
     "bcryptjs": "^2.4.3",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.13.2",
     "cross-env": "^7.0.3",
     "dotenv": "^10.0.0",
     "mysql2": "^2.3.3",
@@ -39,12 +41,14 @@
     "rxjs": "^7.2.0",
     "sequelize": "^6.12.0-alpha.1",
     "sequelize-typescript": "^2.1.1",
-    "swagger-ui-express": "^4.1.6"
+    "swagger-ui-express": "^4.1.6",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@nestjs/cli": "^8.0.0",
     "@nestjs/passport": "^8.0.1",
     "@nestjs/schematics": "^8.0.0",
+    "@nestjs/serve-static": "^2.2.2",
     "@nestjs/testing": "^8.0.0",
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.13",
